# ckcore

./: .gitignore  README  ckcore.doxy  ckcore_vc08.sln  ckcore_vc10.sln  configure.ac  reconfigure
include/ckcore/: assert.hh  buffer.hh  bufferedstream.hh  canexstream.hh  cast.hh  convert.hh  crcstream.hh  directory.hh  dynlib.hh  exception.hh  file.hh  filestream.hh  linereader.hh  locker.hh  log.hh  memory.hh  memorystream.hh  nullstream.hh  path.hh  process.hh  progress.hh  progresser.hh  stream.hh  string.hh  system.hh  task.hh  thread.hh  threadpool.hh  types.hh
include/ckcore/unix/: directory.hh  file.hh  process.hh  thread.hh
include/ckcore/windows/: directory.hh  file.hh  process.hh  stdafx.hh  thread.hh
src/: Makefile.am  assert.cc  bufferedstream.cc  bufferedstream.hh  canexstream.cc  convert.cc  convert.hh  crcstream.cc  crcstream.hh  directory.hh  dynlib.cc  exception.cc  file.hh  filestream.cc  filestream.hh  log.cc  memorystream.cc  nullstream.cc  nullstream.hh  path.cc  path.hh  progress.hh  progresser.cc  progresser.hh  stream.cc  stream.hh  string.cc  string.hh  system.cc  system.hh  threadpool.cc  types.hh
src/linux/: Makefile.am  directory.cc  directory.hh  file.cc  file.hh
src/unix/: Makefile.am  directory.cc  file.cc  process.cc  thread.cc
src/windows/: ckcore.sln  ckcore.vcproj  ckcore_vc08.sln  ckcore_vc08.vcproj  ckcore_vc10.sln  ckcore_vc10.vcxproj  ckcore_vc10.vcxproj.filters  cpuid64.asm  directory.cc  directory.hh  file.cc  file.hh  process.cc  stdafx.cc  stdafx.cpp  stdafx.hh  test.vcproj  test_vc08.vcproj  test_vc10.vcxproj  test_vc10.vcxproj.filters  thread.cc  util.cc  util.hh
tests/: Makefile  cast.hh  convert.hh  directory.hh  file.hh  filetester.cc  filetester.vcproj  filetester_vc10.vcxproj  linereader.hh  path.hh  process.hh  runtests  smallclient.cc  smallclient_vc08.vcproj  stream.hh  streambench.cc  string.hh  thread.hh  threadpool.hh
tests/data/linereader/: text_ansi.txt  text_utf8.txt  text_utf8_elb.txt
