EXTRA_DIST = ../../include/ckcore/unix/directory.hh \
			 ../../include/ckcore/unix/file.hh \
			 ../../include/ckcore/unix/process.hh

library_includedir = $(includedir)/ckcore/unix
library_include_HEADERS = ../../include/ckcore/unix/directory.hh \
						  ../../include/ckcore/unix/file.hh \
						  ../../include/ckcore/unix/process.hh

